# simd-gaussian-ray-tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  fallback.mak  flake.nix  gen-gif.sh  generate_plots.sh  get-exts.sh  premake5.lua  run-hpc.sh  runtimes.sh
hpctoolkit-perf-test-database-clang/: cct.db  meta.db  profile.db
hpctoolkit-perf-test-database-clang/src/home/sdawid/University/ba-thesis/src/include/: tsimd_sh.H
hpctoolkit-perf-test-database-clang/src/home/sdawid/University/ba-thesis/src/volumetric-ray-tracer/: approx.cpp  rt.cpp
hpctoolkit-perf-test-database-gcc/: cct.db  meta.db  profile.db
hpctoolkit-perf-test-database-gcc/metrics/: default.yaml
hpctoolkit-perf-test-database-gcc/src/home/sdawid/University/ba-thesis/src/volumetric-ray-tracer/: approx.cpp  rt.h  types.h
hpctoolkit-perf-test-database-znver4/: cct.db  meta.db  profile.db
hpctoolkit-perf-test-database-znver4/metrics/: default.yaml
julia/: Manifest.toml  Project.toml  approx_erf.jl  cmp_erf.jl  image_timing.jl  simd_erf_timing.jl  tiling_projection.jl  timing.jl  transmittance.jl  wrapper.sh
notes/: NOTES.typ  slides.md  transmittance.jl
notes/simd-slides/: Makefile  slides.tex
notes/simd-slides-examples/hpctoolkit-sum-database/: cct.db  meta.db  profile.db
notes/simd-slides/example/: sum.cpp
notes/simd-slides/example/hpctoolkit-sum-database/metrics/: default.yaml
src/include/: definitions.h  error_fmt.h  tsimd.H
src/jevents/: CMakeLists.txt
src/jevents/examples/: ptself
src/vk-renderer/: CMakeLists.txt  vk-renderer.cpp  vk-renderer.h
src/vk-renderer/vk-mem-alloc/: vk_mem_alloc.cpp
src/volumetric-ray-tracer/: approx.cpp  approx.h  camera.cpp  camera.h  gaussians-from-file.cpp  gaussians-from-file.h  main.cpp  rocm-rt.hip  rt.cpp  rt.h  thread-pool.h  types.h
src/volumetric-ray-tracer/tests/: accuracy.cpp  approx_cycles.cpp  image-timing.cpp  img-error.cpp  perf-test.cpp  svml-test.cpp  timing.cpp  transmittance.cpp
src/volumetric-ray-tracer/unit-tests/: main.cpp  transmittance.cpp
src/vrt/: CMakeLists.txt  approx.cpp  approx.h  camera.cpp  camera.h  gaussians-from-file.cpp  gaussians-from-file.h  rt.cpp  rt.h  thread-pool.cpp  thread-pool.h  types.cpp  types.h  vrt.h
thesis/: .gitignore  BaMAStruktur.md  Makefile  Outline.md  README.md  TODOs.md  glossary.tex  main.bib  main.tex
thesis/plots/: cmp_erf_approx.tex  cmp_erf_err.tex  cmp_exp_approx.tex  cmp_exp_err.tex  compiler_speedups.tex  efficiency.tex  runtimes.tex  runtimes_svml.tex  simd_speedup.tex  speedup.tex  speedups.tex  taylor_erf.tex  znver4_cmp_erf_approx.tex  znver4_cmp_erf_err.tex  znver4_cmp_exp_approx.tex  znver4_cmp_exp_err.tex  znver4_simd_erf_timing.tex  znver4_simd_exp_timing.tex
thesis/smart-thesis/: common-packages.tex
(+4 files in other folders)
